added animations and transformations to landing-page

--- a/animations/css/landing-page.css
+++ b/animations/css/landing-page.css
@@ -60,12 +60,42 @@ body {
   font-size: 60px;
   font-weight: 400;
   letter-spacing: 35px;
+  animation: moveInLeft 1s ease-out;
+}
+@keyframes moveInLeft {
+  0% {
+    opacity: 0;
+    transform: translateX(-100px);
+  }
+  80% {
+    transform: translateX(10px);
+
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 .heading-primary-sub {
   display: block;
   font-size: 20px;
   font-weight: 700;
   letter-spacing: 17.4px;
+  animation: moveInRight 1s ease-out;
+}
+@keyframes moveInRight {
+  0% {
+    opacity: 0;
+    transform: translateX(100px);
+  }
+  80% {
+    transform: translateX(-10px);
+
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
 }
 
 .btn:link,
@@ -104,4 +134,22 @@ body {
 }
 .btn-white::after {
   background-color: #fff;
+}
+.btn-animated {
+  animation: moveFromBottom 500ms ease-out 1s;
+  animation-fill-mode: backwards;
+} 
+@keyframes moveFromBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  80% {
+    transform: translateY(-50px);
+
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
